@@ -4,6 +4,7 @@ acmacs.r NEWS -- history of user-visible changes.
 ** getting transformation of projection (2D and 3D)
 ** setting transformation of projection (2D and 3D)
 ** procrustes for just antigens or just sera
+** reorient projection of a chart to a master projection (of the same or different chart)
 
 * Changes in 2.10 (2018-11-13)
 ** merging tables
